// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Pre-conversion snapshots — about components About renders 1`] = `
<div
  animate={false}
  className="sc-kAycey kyOHBI"
>
  <div
    className="sc-imWYAH eQRhRs"
  >
    <div
      className="sc-aXZVf sttnM"
      onClick={[Function]}
    >
      <svg
        data-testid="svg-mock"
        height="16"
        width="16"
      />
      <span
        className="sc-gEvEes kUQrgB"
      >
        Download Press Kit
      </span>
    </div>
    <div
      className="sc-eqUAAB dbfHne"
    >
      <div
        className="sc-fqkvVO deiVyh"
        onClick={[Function]}
      >
        <p
          animate={false}
          className="sc-dcJsrX bPtGBo"
        >
          MISSION
        </p>
        <p
          className="sc-iGgWBk ddvcob"
        >
          –
        </p>
      </div>
      <p
        animate={false}
        className="sc-gsFSXt cVpGyj"
        isClosed={false}
      >
        Refugee Flow uses compelling visual design with comprehensive data to humanize the perilous transformation of the refugee.
      </p>
    </div>
    <div
      className="sc-eqUAAB dbfHne"
    >
      <div
        className="sc-fqkvVO deiVyh"
        onClick={[Function]}
      >
        <p
          animate={false}
          className="sc-dcJsrX bPtGBo"
        >
          VISION
        </p>
        <p
          className="sc-iGgWBk ddvcob"
        >
          +
        </p>
      </div>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        Refugee Flow's vision is for all people to live to their fullest potential without threat of violence and for all people to understand each person's inherent dignity.
      </p>
    </div>
    <div
      className="sc-eqUAAB dbfHne"
    >
      <div
        className="sc-fqkvVO deiVyh"
        onClick={[Function]}
      >
        <p
          animate={false}
          className="sc-dcJsrX bPtGBo"
        >
          PROJECT TEAM
        </p>
        <p
          className="sc-iGgWBk ddvcob"
        >
          –
        </p>
      </div>
      <p
        animate={false}
        className="sc-gsFSXt cVpGyj"
        isClosed={false}
      >
        <em>
          <a
            href="https://www.linkedin.com/in/will-su"
            rel="noopener noreferrer"
            target="_blank"
          >
            Will Su - Co-Creator
          </a>
        </em>
          rides the line between design and technology. His work focuses on presenting data efficiently and beautifully with fluid interactivity. He has received awards from  
        <a
          href="https://www.informationisbeautifulawards.com/showcase/2348-nyc-foodiverse"
          rel="noopener noreferrer"
          target="_blank"
        >
          Information is Beautiful
        </a>
        ,  
        <a
          href="https://www.awwwards.com/sites/nyc-foodiverse"
          rel="noopener noreferrer"
          target="_blank"
        >
          Awwwards
        </a>
          and placed first at the  
        <a
          href="https://medium.com/@nycmedialab/prototyping-teams-win-12-000-in-prizes-at-mlbam-hackathon-organized-by-nyc-media-lab-d9fee4c7ccaf"
          rel="noopener noreferrer"
          target="_blank"
        >
          MLB Advanced Media Hackathon
        </a>
        . He speaks regularly at  
        <a
          href="https://www.meetup.com/UX-Support-Group/events/248956066/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Meetups
        </a>
          and  
        <a
          href="https://dnnsociety.org/2018/01/01/from-graphic-designer-to-data-visualisation-specialist-a-sharing-from-will-su/"
          rel="noopener noreferrer"
          target="_blank"
        >
          universities
        </a>
          about his learning path and perspective on data visualization.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt cVpGyj"
        isClosed={false}
      >
        <em>
          <a
            href="https://www.linkedin.com/in/abins"
            rel="noopener noreferrer"
            target="_blank"
          >
            Abin Abraham - Co-Creator
          </a>
        </em>
          is a technical leader who builds and manages complex systems while helping others understand them. With a background spanning software engineering, cybersecurity, and enterprise platforms, he is drawn to distilling complexity into clarity, whether through data, design, or narrative. He believes technology reaches its highest purpose when it serves the common good.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt cVpGyj"
        isClosed={false}
        style={
          {
            "fontSize": "17px",
            "fontWeight": "800",
            "margin": 0,
          }
        }
      >
        <em>
          If you have any questions or feedback, please contact
        </em>
         
        <a
          href="mailto:refugeeflow@gmail.com"
          rel="noopener noreferrer"
          style={
            {
              "fontSize": "17px",
              "fontStyle": "italic",
              "fontWeight": "200",
              "margin": 0,
              "marginLeft": "8px",
            }
          }
          target="_blank"
        >
          refugeeflow@gmail.com
        </a>
      </p>
    </div>
    <div
      className="sc-eqUAAB dbfHne"
    >
      <div
        className="sc-fqkvVO deiVyh"
        onClick={[Function]}
      >
        <p
          animate={false}
          className="sc-dcJsrX bPtGBo"
        >
          Q & A
        </p>
        <p
          className="sc-iGgWBk ddvcob"
        >
          +
        </p>
      </div>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
        style={
          {
            "fontSize": "20px",
            "fontWeight": 400,
            "lineHeight": 2,
          }
        }
      >
        What is Refugee Flow?
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        Refugee Flow is an interactive visualization that brings together conflict data, migration routes, and asylum statistics to help users understand the global displacement crisis. It combines multiple authoritative datasets into one explorable experience.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
        style={
          {
            "fontSize": "20px",
            "fontWeight": 400,
            "lineHeight": 2,
          }
        }
      >
        How can design and technology help find solutions in migration?
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        Facts alone rarely move people to act. Refugee Flow merges design and technology to present displacement data in ways that resonate on a human level. By making the crisis tangible and explorable, we believe users can develop a deeper understanding that drives better conversations and better solutions.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
        style={
          {
            "fontSize": "20px",
            "fontWeight": 400,
            "lineHeight": 2,
          }
        }
      >
        What makes your team unique for this project?
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        Will brings the creative mind of a designer who turns complex information into compelling visual experiences. Abin brings a systems engineering background with a focus on distilling complexity into clarity. Together, they combine design thinking with technical depth to build something that neither could alone.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
        style={
          {
            "fontSize": "20px",
            "fontWeight": 400,
            "lineHeight": 2,
          }
        }
      >
        What does Refugee Flow do differently than existing datasets?
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        Most displacement dashboards show static charts and summary statistics. Refugee Flow lets users explore the data themselves. You can rotate a 3D globe of conflict events, trace migration routes, examine deaths along those routes on a case-by-case basis, and see asylum trends over time. It turns data into an experience.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
        style={
          {
            "fontSize": "20px",
            "fontWeight": 400,
            "lineHeight": 2,
          }
        }
      >
        Who can use Refugee Flow and how?
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        Anyone. Refugee Flow is built for the person who has heard about the crisis but wants to understand it more deeply. No background in data or policy is needed.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
        style={
          {
            "fontSize": "20px",
            "fontWeight": 400,
            "lineHeight": 2,
          }
        }
      >
        Why is Refugee Flow important?
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        By mid-2024, over 120 million people were forcibly displaced worldwide, nearly double the figure from 2017. Climate change, armed conflict, and political instability continue to accelerate displacement. Understanding the scale and human cost of this crisis is a prerequisite for meaningful action. Refugee Flow is a call to that understanding.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
        style={
          {
            "fontSize": "20px",
            "fontWeight": 400,
            "lineHeight": 2,
          }
        }
      >
        How current is the data?
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        Refugee Flow automatically ingests updated data from its sources on a weekly basis. Asylum applications, migration route deaths, border crossing statistics, and conflict data are refreshed without manual intervention.
      </p>
    </div>
    <div
      className="sc-eqUAAB dbfHne"
    >
      <div
        className="sc-fqkvVO deiVyh"
        onClick={[Function]}
      >
        <p
          animate={false}
          className="sc-dcJsrX bPtGBo"
        >
          Data Sources
        </p>
        <p
          className="sc-iGgWBk ddvcob"
        >
          +
        </p>
      </div>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
        style={
          {
            "fontStyle": "italic",
            "marginBottom": "10px",
          }
        }
      >
        Data is automatically refreshed weekly from the sources listed below.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        •  
        <em>
          <a
            href="https://www.unhcr.org/refugee-statistics/download/"
            rel="noopener noreferrer"
            target="_blank"
          >
            UNHCR Refugee Data Finder
          </a>
        </em>
          provides global asylum application data by country of origin and destination. Refugee Flow uses UNHCR annual totals from 2010 to present, covering asylum seekers, refugees, and other populations of concern worldwide.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        •  
        <em>
          <a
            href="https://missingmigrants.iom.int/downloads"
            rel="noopener noreferrer"
            target="_blank"
          >
            Missing Migrants Project
          </a>
        </em>
          tracks deaths of migrants, including refugees and asylum-seekers, who have died or gone missing in the process of migration towards an international destination.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        •  
        <em>
          <a
            href="http://www.themigrantsfiles.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
            The Migrants Files
          </a>
        </em>
          is a consortium of journalists from over 10 EU countries. It is coordinated by Journalism++.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        •  
        <em>
          <a
            href="https://frontex.europa.eu/along-eu-borders/migratory-map/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Frontex
          </a>
        </em>
          the European Border and Coast Guard Agency, promotes, coordinates and develops European border management in line with the EU fundamental rights charter and the concept of Integrated Border Management. To help identify migratory patterns as well as trends in cross-border criminal activities, Frontex analyses data related to the situation at and beyond EU's external borders.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        •  
        <em>
          <a
            href="https://www.acleddata.com/data/"
            rel="noopener noreferrer"
            target="_blank"
          >
            ACLED
          </a>
        </em>
          (Armed Conflict Location & Event Data) is a disaggregated conflict analysis and crisis mapping project. ACLED is the highest quality, most widely used, realtime data and analysis source on political violence and protest in the developing world. Practitioners, researchers and governments depend on ACLED for the latest reliable information on current conflict and disorder patterns.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        •  
        <em>
          <a
            href="https://ec.europa.eu/eurostat/web/migration-asylum/asylum/database"
            rel="noopener noreferrer"
            target="_blank"
          >
            Eurostat
          </a>
        </em>
          provides monthly asylum application statistics for EU/EEA countries. Quarterly breakdowns for non-EU destinations are estimated using Eurostat seasonal distribution patterns applied to UNHCR annual totals.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        •  
        <em>
          <a
            href="https://www.cbp.gov/newsroom/stats/nationwide-encounters"
            rel="noopener noreferrer"
            target="_blank"
          >
            U.S. Customs and Border Protection
          </a>
        </em>
          (CBP) publishes monthly encounter statistics for U.S. land borders. Refugee Flow uses Title 8 U.S. Border Patrol apprehension data for the Americas route, aggregated quarterly by nationality. CBP data covers FY2020 (October 2019) to present. Pre-2020 data is not available in machine-readable format.
      </p>
      <p
        animate={false}
        className="sc-gsFSXt kzZNSy"
        isClosed={true}
      >
        •  
        <em>
          <a
            href="https://www.gov.uk/government/statistical-data-sets/immigration-system-statistics-data-tables"
            rel="noopener noreferrer"
            target="_blank"
          >
            UK Home Office
          </a>
        </em>
          publishes quarterly statistics on irregular entry routes to the UK. Refugee Flow uses small boat arrival data for the English Channel route, aggregated by nationality. Data covers 2018 Q1 to present.
      </p>
    </div>
  </div>
</div>
`;

exports[`Pre-conversion snapshots — about components Accordion renders closed 1`] = `
<div
  className="sc-eqUAAB dbfHne"
>
  <div
    className="sc-fqkvVO deiVyh"
    onClick={[Function]}
  >
    <p
      animate={false}
      className="sc-dcJsrX bPtGBo"
    >
      CLOSED
    </p>
    <p
      className="sc-iGgWBk ddvcob"
    >
      +
    </p>
  </div>
  <span>
    child
  </span>
</div>
`;

exports[`Pre-conversion snapshots — about components Accordion renders open 1`] = `
<div
  className="sc-eqUAAB dbfHne"
>
  <div
    className="sc-fqkvVO deiVyh"
    onClick={[Function]}
  >
    <p
      animate={true}
      className="sc-dcJsrX gjUevm"
    >
      TEST
    </p>
    <p
      className="sc-iGgWBk ddvcob"
    >
      –
    </p>
  </div>
  <span>
    child
  </span>
</div>
`;

exports[`Pre-conversion snapshots — about components DownloadLink renders 1`] = `
<div
  className="sc-aXZVf sttnM"
  onClick={[Function]}
>
  <svg
    data-testid="svg-mock"
    height="16"
    width="16"
  />
  <span
    className="sc-gEvEes kUQrgB"
  >
    Download Press Kit
  </span>
</div>
`;

exports[`Pre-conversion snapshots — about components Paragraph renders 1`] = `
<p
  animate={true}
  className="sc-gsFSXt cOWqDK"
  isClosed={false}
>
  Hello world
</p>
`;

exports[`Pre-conversion snapshots — annotation Annotation renders 1`] = `
<div
  className="sc-jXbUNf dHqJJl annotation-wrapper"
  onClick={[Function]}
>
  <p
    className="sc-dhKdcy vWqwR"
  >
    Click anywhere to explore Refugee Flow
  </p>
</div>
`;

exports[`Pre-conversion snapshots — landing DesktopLanding renders 1`] = `
<div
  className="sc-cPiKLY siJvM"
>
  <a
    href="/"
    onClick={[Function]}
  >
    Refugee Flow
  </a>
  <div
    className="sc-dLMFT fktvkU"
    onClick={[Function]}
  >
    INFO
    <svg
      data-testid="svg-mock"
    />
  </div>
  <div
    className="sc-eDPEui ixoZnZ"
  >
    <div
      className="sc-eldPxw ioMAa-D"
      onClick={[Function]}
    >
      x
    </div>
    <div
      className="sc-fPXMVh hPltnj"
    >
      <p
        className="sc-feUZmx gkRUXx"
      >
        Introduction
      </p>
      <div
        className="sc-ikkxIz gDUYdJ"
      >
        <p
          className="sc-gFqAkO jnacIT"
        >
          To leave one's home country, community, and loved ones is a difficult prospect even in times of peace. As violence, persecution, and terror surge the only option for survival and security is to flee one's home.
        </p>
        <p
          className="sc-gFqAkO jnacIT"
        >
          By mid-2024, the United Nations High Commissioner for Refugees reported that over 120 million people were forcibly displaced worldwide, nearly double the figure from just seven years prior. Conflict, persecution, violence, and human rights violations continue to drive this unprecedented crisis.
        </p>
        <p
          className="sc-gFqAkO jnacIT"
        >
          To become a refugee is to be stripped of the foundations of a normal life: home, community, livelihood, and identity. Refugees are met with closed borders, hostile policies, and the indifference of nations that see them as a burden rather than as people. Yet each refugee makes the impossible choice to leave behind everything they know in search of safety.
        </p>
        <p
          className="sc-gFqAkO jnacIT"
        >
          Every refugee represents a failure of the international community to protect its most vulnerable.
        </p>
      </div>
    </div>
    <div
      className="sc-fPXMVh hPltnj"
    >
      <p
        className="sc-fUnMCe iVhTkI"
      >
        The Approach
      </p>
      <div
        className="sc-dAbbOM btOgEi"
      >
        <p
          className="sc-gFqAkO jnacIT"
        >
          Refugee Flow draws on multiple authoritative sources to tell the story of how people become refugees. This project examines one of the fundamental drivers of the global refugee crisis: the collapse of order and stability across regions of the world.
        </p>
        <p
          className="sc-gFqAkO jnacIT"
        >
          This visualization traces the impact of conflict, persecution, and violence on the lives of people in their home countries. It explores what drives millions to flee and the dangerous journeys they undertake.
        </p>
        <p
          className="sc-gFqAkO jnacIT"
        >
          The project maps the routes taken by those who are forcibly displaced and documents the dangers they face along the way. Many who set out on these journeys never reach their destination. The data collected here presents where and how those lives were lost.
        </p>
      </div>
    </div>
    <p
      className="sc-hzhJZP HIIyb"
    >
      Built by: 
      <a
        href="https://willsu.io"
      >
        Will Su
      </a>
      , 
      <a
        href="https://github.com/abinofbrooklyn"
      >
        Abin Abraham
      </a>
    </p>
  </div>
  <div
    id="video"
  >
    <div
      className="sc-jsJBEQ jwJpJW"
    />
    <section
      className="sc-hmdomR kRrRSD"
    >
      <video
        autoPlay={true}
        className="sc-bXCLTF eggHsR"
        loop={true}
        muted={true}
        style={
          {
            "backgroundVideo": "url(assets/img/hero.jpg)",
          }
        }
      >
        <source
          src="https://player.vimeo.com/external/278983563.hd.mp4?s=df2675a8395d48ad7b455f155ae148361121b298&profile_id=175"
        />
      </video>
      <p
        className="sc-fHjqPg jBKPgv"
      >
        "At 
        <i>
          sea
        </i>
        , a frightening number of refugees and migrants are dying each year. On 
        <i>
          land
        </i>
        , people fleeing war are finding their way blocked by closed 
        <i>
          borders
        </i>
        . Closing borders does not solve the problem"
      </p>
    </section>
  </div>
  <a
    className="sc-eeDRCX fEAIQe"
    href="/conflict"
  >
    Launch Visualization
  </a>
</div>
`;

exports[`Pre-conversion snapshots — landing MobileLanding renders 1`] = `
<div
  className="sc-bmzYkV ipIwd"
>
  <div
    className="sc-koXPm jIQsnU"
  >
    <a
      href="/"
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      Refugee Flow
    </a>
  </div>
  <video
    autoPlay={true}
    className="sc-iHGNWg hjdeQB"
    loop={true}
    muted={true}
    style={
      {
        "backgroundVideo": "url(assets/img/hero.jpg)",
      }
    }
  >
    <source
      src="https://player.vimeo.com/external/278983563.hd.mp4?s=df2675a8395d48ad7b455f155ae148361121b298&profile_id=175"
    />
  </video>
  <p
    className="sc-dtBdUn fUgQiG"
  >
    Thanks for your interest in learning more about the refugee crisis. We designed Refugee Flow as an exploratory experience.
    <br />
    <br />
     Unfortunately mobile is not best suited for what we built. Instead, please bookmark the page and comeback and explore when you are on a laptop or desktop. 
  </p>
  <p
    className="sc-kOHTFy cOkqHt"
    onClick={[Function]}
  >
    Learn More...
  </p>
</div>
`;

exports[`Pre-conversion snapshots — navbar Navbar renders in router + redux context 1`] = `
<div
  className="sc-cwHptO cEOlZp"
  id="nav-show"
>
  <a
    href="/"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    Refugee Flow
  </a>
  <nav
    className="sc-jEACwF jJodkt"
  >
    <a
      href="/conflict"
      onClick={[Function]}
    >
      Conflict
    </a>
    <a
      href="/route/EasternMediterranean"
      onClick={[Function]}
    >
      Route
    </a>
    <a
      href="/about"
      onClick={[Function]}
    >
      About
    </a>
    <a
      onClick={[Function]}
    >
      Donate
    </a>
  </nav>
</div>
`;
